improve query to get sample information
